# spec-kit

./: .copilotignore  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  spec-kit.code-workspace  spec-kit.sln  tsconfig.json
.buildx-cache/: index.json
.buildx-cache/base/: index.json
.buildx-cache/tools/: index.json
.config/: agent_commands.yaml  agents.yaml  commands.yaml  settings.yaml
.config/commands/: check.yaml  init.yaml  version.yaml
.devcontainer/: Dockerfile  README.md  SETUP.md  config.yaml  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: common.sh  install_uv.sh  post-create.sh  post_create.sh  post_start.sh  validate.sh
.github/prompts/: speckit.implement.prompt.md  speckit.specify.prompt.md
docker/: .dockerignore  .env  .env.example  Makefile  README.md  buildkit.conf  buildkit.toml  configure-runner.ps1  docker-bake.hcl  docker-compose.infra.yml  docker-compose.validation.yml  docker-compose.yml  pyproject.toml
docker/.config/: architecture.yml  cli.yml  dotnet-dependencies.yml  dotnet-tools.json  environment.yml  github-workflows.yml  gpu-resources.yml  host-analysis-report.yml  infrastructure.yml  optimization-toggles.yml  ports.yml  pr-validation.yml  python-dependencies.yml  semantic-kernel.yml  services.yml  tracing.yml  versions.yml
docker/custom-rules/: README.md  anchor-pattern-validation.yaml
docker/devcontainer/: Dockerfile  base.dockerfile  build.sh  development.dockerfile  docker-compose.override.yml  docker-compose.yml  tools.dockerfile
docker/dockerfiles/: .dockerignore  METADATA_STANDARD.md  README.md  VALIDATION_QUICK_REFERENCE.md  backend.Dockerfile  business.Dockerfile  database.Dockerfile  devcontainer.Dockerfile  devsite.Dockerfile  embeddings.Dockerfile  engine.Dockerfile  face-matcher.Dockerfile  frontend.Dockerfile  gateway.Dockerfile  github-mcp.Dockerfile  github-mcp.README.md  nginx.Dockerfile  playwright.Dockerfile  redis.Dockerfile  redisinsight.Dockerfile  registry.Dockerfile  runner.Dockerfile  soap-client.Dockerfile  validation.Dockerfile  validation.README.md  vector.Dockerfile
docker/docs/: REFACTORING_PLAN.md  github-cli-reference.md  index.md  mkdocs.yml  toc.yml  tools-container.md
docker/face-matcher/: pyproject.toml
docker/face-matcher/config/: config.yml
docker/face-matcher/src/mcp_server/: biometrics_server.py
docker/infrastructure/: README.md
docker/mcp/: compose.mcp.yml
docker/prewarm/: pyproject.toml
docker/prewarm/spec_kit_prewarm/: __init__.py
docker/semantic/: __init__.py
docker/src/: Directory.Build.props  Directory.Packages.props
docker/tests/: .env.test  .gitignore  README.md  integration  package-lock.json  package.json  playwright.config.ts  tsconfig.json
docker/tools/: .gitignore  PLAN.md  __init__.py  cli.py  docgen.py  docker-compose.tools.yml  requirements.txt
docs/: docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
scripts/: README.md
scripts/bash/: check-implementation-prerequisites.sh  check-spec-prerequisites.sh  check-task-prerequisites.sh  create-new-feature.sh  get-feature-paths.sh  setup-plan.sh  start-local.sh  start-virtual.sh  stop-all.sh  update-agent-context.sh
(+435 files in other folders)
