[project]
name = "face-matcher"
version = "0.1.0"
description = "Face Matcher Service"
authors = [{name = "GitHub", email = "noreply@github.com"}]
dependencies = [
    "onnxruntime-gpu==1.16.3",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "faiss-gpu",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "mcp>=1.0.0"
]
requires-python = ">=3.10"
