[project]
name = "spec-kit-prewarm"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "httpx[socks]>=0.27",
    "platformdirs>=4.0",
    "readchar>=4.0",
    "truststore>=0.10.4",
    "markdown-it-py>=3.0",
    "pygments>=2.16",
    "shellingham>=1.5",
    "sniffio>=1.3",
    "socksio>=1.0",
    "typing-extensions>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_kit_prewarm"]